--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 .carousel,
 .rec-top,
 h2 {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: 'Berlin Sans FB';
   padding: 20px;
   background-color: #f7fafc;
   /* A light grey background for the whole section */
@@ -20,7 +20,7 @@ h2 {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: #17bc2f;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-  ;
+  text-align: center;
 }
 
 .recommended-heading:hover {
@@ -66,23 +66,10 @@ h2 {
   border-color: rgba(47, 165, 208, 0.1);
 }
 
-/* Responsive adjustments */
-@media screen and (orientation: portrait) {
-  .recommended-grid {
-    grid-template-columns: 1fr;
-  }
 
-  .carousel-btn {
-    display: none;
-  }
-  .carousel-img.active {
-    min-width: 90vw;
-  }
-}
-
-.footer-container.img {
+/* .footer-container.img {
   border-radius: 15px 30px;
-}
+} */
 
 /* Footer Styles */
 .footer {
@@ -136,35 +123,68 @@ h2 {
   position: relative;
   width: 100%;
   height: 20%;
-  background-color: #f7fafc;
 }
 
 .carousel-inner {
-  overflow: hidden;
-  margin: auto;
-  padding: 2.5%;
+  /* Use flexbox to center content horizontally */
   display: flex;
   justify-content: center;
+  align-items: center;
+  /* This will vertically center if needed */
+  overflow: hidden;
+  /* Hides horizontal scrollbar */
+  margin: auto;
+  padding-bottom: 6vh;
+
+}
+
+.carousel-card {
+  /* Makes the card a flex container to align its children (img and p) */
+  display: flex;
+  /* Aligns children horizontally */
+  flex-direction: row;
+  /* Prevents the card from growing or shrinking */
+  flex: 0 0 auto;
+  align-items: center;
+  column-gap: 3vw;
 }
 
 .carousel-img {
   box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
-  aspect-ratio: 3 / 2;
-  /* Maintains image aspect ratio */
+  aspect-ratio: 5 / 4;
   width: 40vw;
   border-radius: 20px;
   object-fit: cover;
-  top: 0;
-  left: 0;
-  display: none;
-  filter: blur(5px);
+  /* Makes images visible by default */
+  display: block;
+  filter: none;
+  opacity: 0.5;
+  transition: opacity 0.5s ease-in-out, filter 0.5s ease-in-out;
 }
 
-.carousel-img.active {
+.desc {
+  /* Makes descriptions visible by default */
+  display: block;
+  font-size: 35px;
+  font-weight: bolder;
+}
+
+.carousel-img.active,
+.desc.active {
   opacity: 1;
   filter: blur(0);
-  display: flex;
-  transition: opacity 0.5s ease-in-out, filter 0.5s ease-in-out;
+}
+
+.carousel-img,
+.desc {
+  /* This ensures that both the image and the description are hidden if they don't have the active class */
+  display: none;
+}
+
+.carousel-img.active,
+.desc.active {
+  /* This will make them visible when active */
+  display: block;
 }
 
 .carousel-btn {
@@ -191,9 +211,81 @@ h2 {
 }
 
 .left-btn {
-  left: 10%;
+  left: 4%;
 }
 
 .right-btn {
-  right: 10%;
+  right: 4%;
+}
+
+/* hobbies section */
+
+.hobbies-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1em;
+}
+
+.hobbie-img {
+  width: 100%;
+  height: 100%;
+}
+
+.hobbie-card:last-child {
+  justify-self: center;
+  align-self: center;
+  grid-column: 2/span 1;
+}
+
+.hobbie-card {
+  position: relative;
+  border-radius: 40%;
+  z-index: 1;
+  overflow: hidden;
+  box-shadow: 0 12px 12px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease-in-out;
+  border-style: solid;
+  border-color: rgba(242, 244, 245, 0.1);
+  aspect-ratio: 1 / 1;
+  width: 30vw;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.hobbie-card:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 12px 12px rgba(18, 131, 131, 0.1);
+  transition: transform 0.4s ease-in-out;
+  border-image-slice: 1;
+  border-width: 3px;
+  border-style: solid;
+  border-color: rgba(47, 165, 208, 0.1);
+}
+
+
+
+/* Responsive adjustments */
+@media screen and (orientation: portrait) {
+
+  .recommended-grid,
+  .hobbies-grid {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .carousel-btn {
+    display: none;
+  }
+
+  .carousel-img.active {
+    min-width: 85vw;
+  }
+
+  .hobbie-card {
+    align-self: center;
+    min-width: 80vw;
+  }
+
+  .desc.active {
+    display: none;
+  }
 }
