--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,11 @@
 
 .heading {
   display: flex;
-  
 }
 
 .heading p {
   padding: 5vw;
-  font-size:x-large;
+  font-size: 1.5rem;
   color: #4e4e4f;
   font-weight: 200;
 }
@@ -21,6 +20,9 @@
   /* Makes images visible by default */
   filter: none;
   margin: 5vw;
+  flex-shrink: 2;
+  height: 90%;
+  align-self: center;
 }
 
 
