--- a/styles.css
+++ b/styles.css
@@ -43,10 +43,10 @@ h2 {
 }
 
 .recommended-heading {
-  font-size: 2.5rem;
+  font-size: 3rem;
   font-weight: 600;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color: #17bc2f;
+  color: #177abc;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   text-align: center;
 }
@@ -319,7 +319,7 @@ h2 {
     min-width: 60vw;
   }
 
-  .desc.active {
+  /* .desc.active {
     display: none;
-  }
+  } */
 }
