--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,34 @@
 
 .heading {
   display: flex;
+  align-items: center;
+  justify-items: center;
+  display: flex;
 }
 
-.heading p {
-  padding: 5vw;
-  font-size: 1.5rem;
-  color: #4e4e4f;
-  font-weight: 200;
+ul > p {
+  font-size: 2em;
+  color: #000000;
+  font-weight: 400;
+}
+
+ul {
+  justify-items: center;
+  box-sizing: border-box;
+  list-style: none;
+}
+li {
+  justify-items: center;
+  align-items: center;
+  list-style-type:  none;
+  background-color: rgba(255, 255, 255, 0.493);
+  border-radius: 1.5em;
+  padding: 1em;
+  margin: 1.4em;
+  width: 100%;
+  font-weight: 400;
+  font-size: 1.1em;
+  backdrop-filter: blur(10px) saturate(150%) contrast(150%);
 }
 
 .heading img {
@@ -24,10 +45,11 @@
   align-self: center;
 }
 
-
 /* Recommended for you section container */
 body {
-  background-color: #f7fafc;
+  background-color: rgb(112,128,144);
+  font-family: 'Berlin Sans FB';
+
 }
 
 .recommended-section,
@@ -36,14 +58,13 @@ body {
 h2 {
   font-family: 'Berlin Sans FB';
   padding: 20px;
-  background-color: #f7fafc;
+  background-color: rgb(112,128,144);
 }
 
 .recommended-heading {
-  font-size: 3rem;
+  font-size: 5rem;
   font-weight: 600;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color: #177abc;
+  color: #000000;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   text-align: center;
 }
@@ -92,7 +113,6 @@ h2 {
 
 /* Footer Styles */
 .footer {
-  background-color: #f7fafc;
   color: #000000;
   padding: 20px 0;
   text-align: center;
@@ -164,9 +184,9 @@ h2 {
 
 .desc {
   display: block;
-  font-size: 3vw;
+  font-size: 2rem;
   font-weight: bolder;
-  color: #4e4e4f;
+  color: #000000;
 
 }
 
@@ -277,7 +297,7 @@ h2 {
   }
 
   .carousel-img.active {
-    min-width: 85vw;
+    min-width: 75vw;
   }
 
   .hobbie-card {
@@ -288,6 +308,14 @@ h2 {
   .heading img {
     align-self: center;
     min-width: 60vw;
+  }
+
+  .recommended-section {
+    align-items: center;
+    justify-items: center;
+  }
+  .card {
+    width: 75vw;
   }
 
 }
