--- a/styles.css
+++ b/styles.css
@@ -2,54 +2,17 @@
 
 .heading {
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-items: center;
   display: flex;
-}
-
-ul > p {
-  font-size: 2em;
-  color: #000000;
-  font-weight: 400;
-}
-
-ul {
-  justify-items: center;
-  box-sizing: border-box;
-  list-style: none;
-}
-li {
-  justify-items: center;
-  align-items: center;
-  list-style-type:  none;
-  background-color: rgba(255, 255, 255, 0.493);
-  border-radius: 1.5em;
-  padding: 1em;
-  margin: 1.4em;
   width: 100%;
-  font-weight: 400;
-  font-size: 1.1em;
-  backdrop-filter: blur(10px) saturate(150%) contrast(150%);
-}
-
-.heading img {
-  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
-  aspect-ratio: 1/1 ;
-  width: 25vw;
-  border-radius: 20px;
-  object-fit: cover;
-  filter: none;
-  margin: 5vw;
-  flex-shrink: 2;
-  height: 90%;
-  align-self: center;
 }
 
 /* Recommended for you section container */
 body {
   background-color: rgb(112,128,144);
   font-family: 'Berlin Sans FB';
-
+  
 }
 
 .recommended-section,
@@ -59,6 +22,52 @@ h2 {
   font-family: 'Berlin Sans FB';
   padding: 20px;
   background-color: rgb(112,128,144);
+}
+
+.rec-top {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.rec-top > img {
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+  aspect-ratio: 1/1 ;
+  border-radius: 20px;
+  object-fit: cover;
+  margin: 5em;
+  width: 15em;
+}
+
+ul > p {
+  font-size: 2em;
+  font-weight: 400;
+  flex-basis: 100%;
+  text-align: center;
+}
+
+ul {
+  justify-content: center;
+  box-sizing: border-box;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+li {
+  flex-basis: 50%;
+  justify-items: center;
+  list-style-type:  none;
+  border-radius: 1.5em;
+  padding: 1em;
+  margin: 1.4em;
+  width: 100%;
+  font-weight: 400;
+  font-size: 1.1em;
+  background-color: rgba(255, 255, 255, 0.493);
+  backdrop-filter: blur(10px) saturate(150%) contrast(150%);
 }
 
 .recommended-heading {
