--- a/styles.css
+++ b/styles.css
@@ -63,9 +63,9 @@ li {
   border-radius: 1.5em;
   padding: 1em;
   margin: 1.4em;
-  width: 100%;
   font-weight: 400;
   font-size: 1.1em;
+  max-width: 20em;
   background-color: rgba(255, 255, 255, 0.493);
   backdrop-filter: blur(10px) saturate(150%) contrast(150%);
 }
@@ -86,7 +86,9 @@ li {
 .recommended-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
-  gap: 20px;
+  gap: 10px;
+  align-items: center;
+  justify-items: center;
 }
 
 /* Individual card styles */
@@ -103,6 +105,7 @@ li {
   transition: transform 0.2s ease-in-out;
   border-style: solid;
   border-color: rgba(242, 244, 245, 0.1);
+  width: 35em;
 }
 
 .card:hover {
