--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,7 @@
 
 .heading {
   display: flex;
-  align-items: stretch;
   justify-items: center;
-  display: flex;
-  width: 100%;
 }
 
 /* Recommended for you section container */
@@ -21,7 +18,6 @@ body {
 h2 {
   font-family: 'Berlin Sans FB';
   padding: 20px;
-  background-color: rgb(112,128,144);
 }
 
 .rec-top {
@@ -40,7 +36,7 @@ h2 {
   width: 15em;
 }
 
-ul > p {
+.rec-top > p {
   font-size: 2em;
   font-weight: 400;
   flex-basis: 100%;
@@ -48,24 +44,21 @@ ul > p {
 }
 
 ul {
-  justify-content: center;
-  box-sizing: border-box;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
+  display: grid; /* Enables CSS Grid layout */
+  grid-template-columns: repeat(2, 1fr); /* Creates two equal-width columns */
+  justify-content: center; /* Center the rows of items */
 }
 
 li {
-  flex-basis: 50%;
-  justify-items: center;
-  list-style-type:  none;
+  width: 20em;
+  box-sizing: border-box; 
+  margin: .5em;
+  padding: .5em;
+  justify-items: center; 
+  list-style-type: none;
   border-radius: 1.5em;
-  padding: 1em;
-  margin: 1.4em;
   font-weight: 400;
   font-size: 1.1em;
-  max-width: 20em;
   background-color: rgba(255, 255, 255, 0.493);
   backdrop-filter: blur(10px) saturate(150%) contrast(150%);
 }
@@ -93,28 +86,31 @@ li {
 
 /* Individual card styles */
 .card {
-  position: relative;
   border-radius: 15px 50px;
   z-index: 1;
   overflow: hidden;
   background-color: #ffffff;
   box-shadow: 0 12px 12px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  display: flex;
-  flex-direction: column;
   transition: transform 0.2s ease-in-out;
   border-style: solid;
   border-color: rgba(242, 244, 245, 0.1);
-  width: 35em;
+  width: 25vw;
+  aspect-ratio: 1/1;
+  height: 0;
+  padding-bottom: 63%
+}
+
+.card > img {
+  object-fit: scale-down;
+  display: block;
+  width: 100%;
 }
 
 .card:hover {
   transform: translateY(-3px);
   border-radius: 15px, 30px;
   box-shadow: 0 12px 12px rgba(18, 131, 131, 0.1);
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
   transition: transform 0.2s ease-in-out;
   border-image-slice: 1;
   border-width: 3px;
@@ -213,10 +209,6 @@ li {
   display: none;
 }
 
-.carousel-img.active,
-.desc.active {
-  display: block;
-}
 
 .carousel-btn {
   position: absolute;
@@ -298,7 +290,6 @@ li {
 @media screen and (orientation: portrait) {
 
   .recommended-grid,
-  .hobbies-grid,
   .heading {
     display: flex;
     flex-direction: column;
@@ -308,26 +299,44 @@ li {
     display: none;
   }
 
+  ul {
+    gap: 5px;
+  }
+
   .carousel-img.active {
     min-width: 75vw;
   }
 
   .hobbie-card {
     align-self: center;
-    min-width: 80vw;
+    min-width: 40vw;
+    flex-basis: 50%;
   }
 
-  .heading img {
+  .heading > img {
     align-self: center;
-    min-width: 60vw;
   }
 
   .recommended-section {
     align-items: center;
     justify-items: center;
+    flex-wrap: wrap;
   }
   .card {
-    width: 75vw;
+    max-width: 40vw;
+    flex-basis: 50%;
   }
 
+  .cert-image {
+    max-width: 40vw;
+  }
+
+  .hobbies-grid {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .hobbie-img {
+    flex-basis: 50%;
+  }
 }
