--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ li {
 }
 
 .recommended-heading {
-  font-size: 5rem;
+  font-size: 4rem;
   font-weight: 600;
   color: #000000;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
@@ -158,7 +158,7 @@ li {
 
 .image-slot {
     /* Basic dimensions for all slots */
-    height: 400px;
+    height: 200px;
     background-size: cover;
     background-position: center;
     transition: all 0.5s ease-in-out; /* Smooth transition for rotation */
@@ -166,19 +166,18 @@ li {
     margin: 0 10px;
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-}
-
-/* Side Images (Faded) */
-.image-slot {
-    width: 400px; /* Smaller width for side images */
+    width: 300px; /* Smaller width for side images */
     opacity: 0.4;
     filter: blur(2px) grayscale(50%);
     transform: scale(0.85); /* Slightly smaller */
 }
 
+/* Side Images (Faded) */
+
+
 /* Center Image (Large and Focused) */
 .image-slot.center {
-    width: 500px; /* Larger width for the center image */
+    width: 600px; /* Larger width for the center image */
     opacity: 1;
     filter: none;
     transform: scale(1);
@@ -249,7 +248,7 @@ li {
     gap: 5px;
   }
 
-  .hobbie-card {
+  .hobbie-card, .cert-image {
     align-self: center;
     min-width: 40vw;
     flex-basis: 50%;
