--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 .rec-top,
 h2 {
   font-family: 'Berlin Sans FB';
-  padding: 20px;
+  padding: 15px;
 }
 
 .rec-top {
@@ -36,7 +36,7 @@ h2 {
   aspect-ratio: 1/1 ;
   border-radius: 20px;
   object-fit: cover;
-  margin: 5em;
+  margin: 3em;
   width: 15em;
 }
 
@@ -158,7 +158,7 @@ li {
 
 .image-slot {
     /* Basic dimensions for all slots */
-    height: 200px;
+    height: 400px;
     background-size: cover;
     background-position: center;
     transition: all 0.5s ease-in-out; /* Smooth transition for rotation */
@@ -171,9 +171,6 @@ li {
     filter: blur(2px) grayscale(50%);
     transform: scale(0.85); /* Slightly smaller */
 }
-
-/* Side Images (Faded) */
-
 
 /* Center Image (Large and Focused) */
 .image-slot.center {
@@ -245,7 +242,13 @@ li {
 @media screen and (orientation: portrait) {
 
   ul {
-    gap: 5px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  li {
+    font-size: large;
+    padding: .2em;
   }
 
   .hobbie-card, .cert-image {
